--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Will",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
     "express": "^4.18.2"
   },
